Refactored workflows
